--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -52,111 +52,112 @@ $icons: map-merge($icons,(zoom: (X: -180px, Y:-33px, W: 17px, H: 17px, TW: 197px
 @mixin sr($i)
 	+sprite-retina($i)	
 
-
-.icon-collapse
-	width: 30px
-	height: 30px
-	background-image: url('../img/icons.png')
-	background-position: 0px -119px
-
-.icon-doc
-	width: 45px
-	height: 52px
-	background-image: url('../img/icons.png')
-	background-position: -82px 0px
-
-.icon-eng
-	width: 28px
-	height: 23px
-	background-image: url('../img/icons.png')
-	background-position: -106px -119px
-
-.icon-fb
-	width: 34px
-	height: 32px
-	background-image: url('../img/icons.png')
-	background-position: -38px -83px
-
-.icon-ger
-	width: 29px
-	height: 24px
-	background-image: url('../img/icons.png')
-	background-position: -73px -119px
-
-.icon-jpg
-	width: 45px
-	height: 49px
-	background-image: url('../img/icons.png')
-	background-position: -131px 0px
-
-.icon-mail
-	width: 26px
-	height: 18px
-	background-image: url('../img/icons.png')
-	background-position: -138px -119px
-
-.icon-next
-	width: 37px
-	height: 79px
-	background-image: url('../img/icons.png')
-	background-position: -41px 0px
-
-.icon-ok
-	width: 34px
-	height: 32px
-	background-image: url('../img/icons.png')
-	background-position: -114px -83px
-
-.icon-prev
-	width: 37px
-	height: 79px
-	background-image: url('../img/icons.png')
-	background-position: 0px 0px
-
-.icon-ru
-	width: 28px
-	height: 23px
-	background-image: url('../img/icons.png')
-	background-position: -82px -56px
-
-.icon-search-icon
-	width: 24px
-	height: 22px
-	background-image: url('../img/icons.png')
-	background-position: -152px -83px
-
-.icon-tel
-	width: 17px
-	height: 29px
-	background-image: url('../img/icons.png')
-	background-position: -180px 0px
-
-.icon-tw
-	width: 34px
-	height: 32px
-	background-image: url('../img/icons.png')
-	background-position: -76px -83px
-
-.icon-upload-2
-	width: 35px
-	height: 24px
-	background-image: url('../img/icons.png')
-	background-position: -131px -53px
-
-.icon-upload
-	width: 35px
-	height: 24px
-	background-image: url('../img/icons.png')
-	background-position: -34px -119px
-
-.icon-vk
-	width: 34px
-	height: 32px
-	background-image: url('../img/icons.png')
-	background-position: 0px -83px
-
-.icon-zoom
-	width: 17px
-	height: 17px
-	background-image: url('../img/icons.png')
-	background-position: -180px -33px
+//
+//.icon-collapse
+//	width: 30px
+//	height: 30px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -119px
+//
+//.icon-doc
+//	width: 45px
+//	height: 52px
+//	background-image: url('../img/icons.png')
+//	background-position: -82px 0px
+//
+//.icon-eng
+//	width: 28px
+//	height: 23px
+//	background-image: url('../img/icons.png')
+//	background-position: -106px -119px
+//
+//.icon-fb
+//	width: 34px
+//	height: 32px
+//	background-image: url('../img/icons.png')
+//	background-position: -38px -83px
+//
+//.icon-ger
+//	width: 29px
+//	height: 24px
+//	background-image: url('../img/icons.png')
+//	background-position: -73px -119px
+//
+//.icon-jpg
+//	width: 45px
+//	height: 49px
+//	background-image: url('../img/icons.png')
+//	background-position: -131px 0px
+//
+//.icon-mail
+//	width: 26px
+//	height: 18px
+//	background-image: url('../img/icons.png')
+//	background-position: -138px -119px
+//
+//.icon-next
+//	width: 37px
+//	height: 79px
+//	background-image: url('../img/icons.png')
+//	background-position: -41px 0px
+//
+//.icon-ok
+//	width: 34px
+//	height: 32px
+//	background-image: url('../img/icons.png')
+//	background-position: -114px -83px
+//
+//.icon-prev
+//	width: 37px
+//	height: 79px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px 0px
+//
+//.icon-ru
+//	width: 28px
+//	height: 23px
+//	background-image: url('../img/icons.png')
+//	background-position: -82px -56px
+//
+//.icon-search-icon
+//	width: 24px
+//	height: 22px
+//	background-image: url('../img/icons.png')
+//	background-position: -152px -83px
+//
+//.icon-tel
+//	width: 17px
+//	height: 29px
+//	background-image: url('../img/icons.png')
+//	background-position: -180px 0px
+//
+//.icon-tw
+//	width: 34px
+//	height: 32px
+//	background-image: url('../img/icons.png')
+//	background-position: -76px -83px
+//
+//.icon-upload-2
+//	width: 35px
+//	height: 24px
+//	background-image: url('../img/icons.png')
+//	background-position: -131px -53px
+//
+//.icon-upload
+//	width: 35px
+//	height: 24px
+//	background-image: url('../img/icons.png')
+//	background-position: -34px -119px
+//
+//.icon-vk
+//	width: 34px
+//	height: 32px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px -83px
+//
+//.icon-zoom
+//	width: 17px
+//	height: 17px
+//	background-image: url('../img/icons.png')
+//	background-position: -180px -33px
+//
