--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,7 +34,7 @@
 </footer>
 
 <div class="modal fade" id="callback" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-header has-logo">
         <div class="modal-logo"><img src="img/logo-footer.png" alt=""></div>
@@ -55,6 +55,20 @@
             <button type="submit" class="btn btn-primary btn-block">Перезвонить мне</button>
           </div>
         </form>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div class="modal fade" id="schemaMap" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Схема проезда:</h4>
+      </div>
+      <div class="modal-body">
+        <div id="mapModal" class="map modal-map"></div>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
