--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -104,6 +104,38 @@ textarea
     text-decoration: none
     &:after
       width: 100%
+
+.breadcrumbs-container
+  margin: 0 auto 30px
+
+.breadcrumbs
+  +clr
+
+.breadcrumbs__item
+  position: relative
+  float: left
+  font-size: 14px
+  + .breadcrumbs__item
+    margin-left: 30px
+    &:before
+      content: '//'
+      position: absolute
+      left: -18px
+      top: 0
+      bottom: 0
+      margin: auto 0
+      display: block
+      color: #555555
+
+.breadcrumbs__link
+  text-decoration: underline
+  color: #3f64ae
+  &:hover
+    text-decoration: none
+
+.breadcrumbs__active
+  color: #555555
+
 //==============================================================================
 // Footer
 //==============================================================================
@@ -305,6 +337,11 @@ textarea
       font-style: italic
     input:checked + .c-box
       background: #7c7c7c
+    img
+      max-width: 100%
+      display: block
+      margin-top: 20px
+
 
   .c-box
     position: absolute
@@ -327,8 +364,16 @@ textarea
       opacity: 0
       position: absolute
       clip: rect(0,0,0,0)
-    input:checked + .c-radio
-      background: #7c7c7c
+    input:checked 
+      &+ .c-radio
+        background: #7c7c7c
+      &~img
+        display: block
+
+    img
+      max-width: 100%
+      display: none
+      margin-top: 20px
 
   .c-radio
     position: absolute
@@ -477,7 +522,7 @@ textarea
 // Main page
 //==============================================================================
 .main_inner-page
-  padding: 60px 0
+  padding: 30px 0 60px
   h1
     text-transform: uppercase
     font-weight: 700
@@ -493,8 +538,8 @@ textarea
     margin-top: 80px
     margin-bottom: 40px
     text-transform: uppercase
-    &:first-child
-      margin-top: 0px
+  >h2:first-child
+    margin-top: 0px
 
 .main_form-page
   padding-bottom: 50px
@@ -691,6 +736,7 @@ textarea
   color: #3f64ae
 
 .calculate
+  position: relative
   height: 346px
   padding: 53px 0 0 50px
   margin: 0 0 88px
@@ -702,6 +748,23 @@ textarea
   text-transform: uppercase
   font-weight: 700
   color: #fff
+  transition: opacity .3s
+  &:hover
+    opacity: .7
+  a
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0  
+    display: block
+    color: #fff
+    text-decoration: none
+    &:hover,
+    &:focus,
+    &:active
+      color: #fff
+      text-decoration: none
 
 .help-block
   text-align: center
@@ -747,6 +810,7 @@ textarea
   display: inline-block
   vertical-align: middle
   margin: 0 15px
+
 .map
   height: 460px
 
@@ -957,6 +1021,12 @@ textarea
   dl
     margin-bottom: 19px
     color: #4a4a4a
+    a
+      color: #4a4a4a
+      text-decoration: none
+      &:hover
+        text-decoration: none
+        color: #4a4a4a
 
   .panel-body
     padding: 12px 2px 32px
@@ -1012,16 +1082,22 @@ textarea
 .news__head
   margin-bottom: 20px
 
-.news__title
-  font-size: 24px
-  font-weight: 700
-  display: inline-block
-  a
+.news
+  .news__title
+    display: inline-block
+    margin-bottom: 0
+    font-size: 24px
+    font-weight: 700
     color: #9c2d40
     text-transform: uppercase
-    text-decoration: underline
-    &:hover
-      text-decoration: none
+    span
+      text-decoration: underline
+    a
+      color: #9c2d40
+      text-decoration: underline
+      &:hover
+        text-decoration: none
+
 
 .news__date
   font-size: 18px
@@ -1139,7 +1215,7 @@ textarea
 .modal-backdrop.in
   opacity: .8
 
-.modal-dialog
+.modal-dialog.modal-sm
   width: 440px
 
 .modal-content
@@ -1174,6 +1250,9 @@ textarea
 .modal-footer
   padding: 0
 
+.modal-header
+  padding-bottom: 16px
+
 .has-logo
   padding: 0 0 16px
   .modal-title
@@ -1182,8 +1261,18 @@ textarea
 
 .certificat__img-show
   display: block
+
+.navbar-toggle
+  margin: 0
+  float: left
+  height: 38px
+  background: rgb(63, 100, 174)
+  .icon-bar
+    background: #fff
+
+
 @media screen and (min-width: 768px)
-  .modal-dialog
+  .modal-dialog.modal-sm
     width: 440px
 /**************************************************/
 /*Media*/
@@ -1258,10 +1347,18 @@ textarea
     padding-bottom: 25px
 
 @media screen and (max-width: 767px)
+  .modal-dialog.modal-sm
+    width: 100%
+  .header__calback
+    .btn
+      display: block
+      margin-left: 50px
+      width: calc(100% - 50px)
   .header__phone,
   .header__email
     float: none
     margin-bottom: 20px
+    margin-right: 0
     display: block
     text-align: center
     font-size: 25px
@@ -1329,7 +1426,7 @@ textarea
 
   .map-contact
     margin-bottom: 30px
-
+  
   .form-contact
     margin-top: 0
     h2
