--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -33,6 +33,7 @@
 // @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/media"
 // @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/list-group"
 // @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/panels"
+@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar"
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed"
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/wells"
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close"
