--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -16,7 +16,8 @@ $icons: map-merge($icons,(tw: (X: -76px, Y:-83px, W: 34px, H: 32px, TW: 197px, T
 $icons: map-merge($icons,(upload-2: (X: -131px, Y:-53px, W: 35px, H: 24px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(upload: (X: -34px, Y:-119px, W: 35px, H: 24px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
 $icons: map-merge($icons,(vk: (X: 0px, Y:-83px, W: 34px, H: 32px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(zoom: (X: -180px, Y:-33px, W: 17px, H: 17px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(zoom-white: (X: -180px, Y:-33px, W: 17px, H: 17px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(zoom: (X: -180px, Y:-54px, W: 17px, H: 17px, TW: 197px, TH: 149px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -155,9 +156,15 @@ $icons: map-merge($icons,(zoom: (X: -180px, Y:-33px, W: 17px, H: 17px, TW: 197px
 //	background-image: url('../img/icons.png')
 //	background-position: 0px -83px
 //
-//.icon-zoom
+//.icon-zoom-white
 //	width: 17px
 //	height: 17px
 //	background-image: url('../img/icons.png')
 //	background-position: -180px -33px
+//
+//.icon-zoom
+//	width: 17px
+//	height: 17px
+//	background-image: url('../img/icons.png')
+//	background-position: -180px -54px
 //
