--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,7 +29,7 @@
               <ul class="lang">
                 <li class="lang__item"><a href="" class="lang__link"><span class="icon-ru"></span><span>RU</span></a></li>
                 <li class="lang__item"><a href="" class="lang__link"><span class="icon-eng"></span><span>ENG</span></a></li>
-                <li class="lang__item"><a href="" class="lang__link"><span class="icon-ger"></span><span>DE</span></a></li>
+                <li class="lang__item"><a href="" class="lang__link active"><span class="icon-ger"></span><span>DE</span></a></li>
               </ul>
             </div>
 
