--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -62,17 +62,20 @@ textarea
   font-weight: 600
   text-decoration: none
   vertical-align: middle
+  display: block
+  padding: 3px
   span
     vertical-align: middle
     &:first-child
     margin-right: 5px
   &:hover,
-  &:active,
-  &.active
+  &:active
     text-decoration: none
     color: #3f64ae
-    transform: scale(1.2)             
-
+  &.active
+    box-shadow: 0 1px 3px rgba(63, 100, 174,0.12), 0 1px 2px rgba(63, 100, 174,0.24)
+    border-radius: 5px
+    border: 1px solid rgba(63, 100, 174, 0.4)
 .logo
   display: block
   margin: 17px 0 0 0
