--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -80,7 +80,7 @@ textarea
   display: inline-block
   margin: 17px 0 0 0
   transition: opacity .3s
-  img 
+  img
     max-width: 100%
     vertical-align: bottom
 
@@ -174,7 +174,7 @@ textarea
   box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, .16 )
   transition: border-color .3s
   &:focus
-    box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, .16 ), 
+    box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, .16 ),
     border: 1px solid darken(#fafafa, 20)
 
 .form-control_size_l
@@ -257,7 +257,7 @@ textarea
     border-color: #aeaeae
     &:not(textarea)
       height: 40px
-.form-modal 
+.form-modal
   .form-control
     font-size: 17px
     padding: 14px 12px
@@ -390,7 +390,7 @@ textarea
       opacity: 0
       position: absolute
       clip: rect(0,0,0,0)
-    input:checked 
+    input:checked
       &+ .c-radio
         background: #7c7c7c
       &~img
@@ -427,7 +427,7 @@ textarea
 
 .form-calc__figure-img
   float: left
-  
+
 
 .form-calc__figure-content
   margin-left: 150px
@@ -467,7 +467,7 @@ textarea
 
 .radio-btn
   display: block
-  padding: 6px 30px  
+  padding: 6px 30px
   min-width: 290px
   border: 3px solid #3f64ae
   border-radius: 6px
@@ -498,7 +498,7 @@ textarea
   &:hover
     color: #3f64ae
     background: darken(#a0e4ff, 10)
-  
+
 .btn-default
   padding: 10px 50px
   border-color: #aeaeae
@@ -589,22 +589,49 @@ textarea
 
 .main-promo-banner__img
   width: 100%
+  min-height: 100%
+
+.main-promo-banner__video
+  position: relative
+  overflow: hidden
+  iframe
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    z-index: 1
+  .main-promo-banner__video-cover
+    position: relative
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 100%
+    z-index: 5
+
+.main-promo-banner__video-inner
+  position: relative
+  width: 100%
+  padding: 56% 0 0
 
 .main-promo-banner__text
   position: absolute
-  top: 180px
+  top: 40%
   max-width: 1020px
   right: 0
   left: 0
   padding: 8px 40px
   border-radius: 2px
-  margin: auto  
+  margin: auto
   background: rgba(0, 0, 0, .58)
   text-align: center
   font-weight: 700
   font-size: 35px
   color: #fff
   text-transform: uppercase
+  z-index: 6
 
 
 .main-promo
@@ -679,7 +706,7 @@ textarea
     height: 104px
     width: 100%
     text-align: center
-  
+
   .base-info-card__text
     margin-left: 0
     text-align: center
@@ -753,7 +780,7 @@ textarea
   width: 32%
   line-height: 1
 
-.fabrics-list__img 
+.fabrics-list__img
   display: inline-block
   width: 70px
   margin: 0 10px
@@ -785,7 +812,7 @@ textarea
     top: 0
     left: 0
     right: 0
-    bottom: 0  
+    bottom: 0
     display: block
     color: #fff
     text-decoration: none
@@ -962,7 +989,7 @@ textarea
   background: #fff
 
 .footer__logo
-  img 
+  img
     max-width: 100%
     vertical-align: bottom
 
@@ -996,7 +1023,7 @@ textarea
     padding: 0
     font-size: 17px
 
-.footer__phone, 
+.footer__phone,
 .footer__email
   font-size: 20px
 
@@ -1047,7 +1074,7 @@ textarea
     font-size: 30px
     a
       display: inline-block
-      color: #3f64ae      
+      color: #3f64ae
       margin-right: 20px
       &.collapsed
         .collapse-icon:after
@@ -1116,7 +1143,7 @@ textarea
   &:hover
     opacity: .7
 .news__photo_single .news__img-outer
-  max-width: inherit 
+  max-width: inherit
   img
     width: 100%
 
@@ -1178,7 +1205,7 @@ textarea
 
 .base-info-section_about
   margin-bottom: 20px
-  .base-info-card__text 
+  .base-info-card__text
     font-size: 20px
     line-height: 1.8
 
@@ -1190,7 +1217,7 @@ textarea
   text-align: center
   img
     display: inline-block
-    max-width: 100% 
+    max-width: 100%
     border-radius: 3px
 
 .slick-prev,
@@ -1222,7 +1249,7 @@ textarea
     min-height: 75px
     margin-bottom: 10px
 
-.certificat 
+.certificat
   +clr
   float: none !important
   font-size: 16px
@@ -1344,7 +1371,7 @@ textarea
       margin-bottom: 0
   p
     margin-bottom: 20px
-  
+
   h4
     font-size: 18px
     font-weight: bold
@@ -1393,7 +1420,7 @@ textarea
     font-size: 20px
     margin-bottom: 30px
     color: #5b5b5b
-  
+
   h1
     margin-bottom: 30px
   h2
@@ -1412,16 +1439,16 @@ textarea
 
 @media screen and (max-width: 1200px)
   .header__phone, .footer__phone,
-  .header__email, .footer__email 
+  .header__email, .footer__email
     font-size: 20px
     span
-      margin-right: 8px 
+      margin-right: 8px
   .header__phone
     margin-right: 20px
-  
+
   .nav__item
     margin: 0 20px
-  
+
   .l-section
     padding-left: 0
     padding-right: 0
@@ -1437,7 +1464,7 @@ textarea
     top: 120px
 
 @media screen and (max-width: 991px)
-  
+
   .main-promo-banner__text
     top: 60px
     margin: 0 30px
@@ -1461,7 +1488,7 @@ textarea
   .goods-view
     margin-bottom: 20px
 
-  .special-propose__goods 
+  .special-propose__goods
     margin-bottom: 30px
 
   .goods-machine
@@ -1478,17 +1505,17 @@ textarea
 
   .footer
     padding-bottom: 25px
-  
+
   .goods-machine
     +clr
-  
+
   .tech-item
     width: 50%
 
 @media screen and (max-width: 767px)
   .brand
     text-align: center
-  
+
   .footer__logo
     margin-bottom: 15px
 
@@ -1526,7 +1553,7 @@ textarea
     width: auto
     text-align: left
 
-  .special-propose__form-head 
+  .special-propose__form-head
     .special-propose__title
       text-align: center
       float: none
@@ -1577,7 +1604,7 @@ textarea
 
   .map-contact
     margin-bottom: 30px
-  
+
   .form-contact
     margin-top: 0
     h2
@@ -1628,12 +1655,12 @@ textarea
     text-align: center
     display: inline-block
     margin-bottom: 10px
-  
+
   .certificat__img-show
     display: inline-block
 
   .certificat__content
-    margin-left: 0  
+    margin-left: 0
 
   .modal-dialog
     width: auto
