--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -594,7 +594,7 @@ textarea
 .main-promo-banner__video
   position: relative
   overflow: hidden
-  iframe
+  iframe, video
     position: absolute
     width: 100%
     height: 100%
@@ -602,13 +602,15 @@ textarea
     left: 0
     z-index: 1
   .main-promo-banner__video-cover
-    position: relative
+    position: absolute
     top: 0
     right: 0
     bottom: 0
     left: 0
     width: 100%
     height: 100%
+    background: url('../img/intro-image-triangle.png') center bottom no-repeat
+    background-size: 100% auto
     z-index: 5
 
 .main-promo-banner__video-inner
