--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -594,16 +594,17 @@ textarea
 .main-promo-banner__video
   position: relative
   overflow: hidden
+  margin-bottom: -10%
   iframe, video
     position: absolute
     width: 100%
     height: 100%
-    top: 0
+    top: -20%
     left: 0
     z-index: 1
   .main-promo-banner__video-cover
     position: absolute
-    top: 0
+    top: -19.5%
     right: 0
     bottom: 0
     left: 0
@@ -620,7 +621,7 @@ textarea
 
 .main-promo-banner__text
   position: absolute
-  top: 40%
+  top: 30%
   max-width: 1020px
   right: 0
   left: 0
