--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -586,6 +586,13 @@ textarea
 
 .main-promo-banner
   position: relative
+  .main-nav
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    z-index: 20
+    background: rgba(255, 255, 255, .7)
 
 .main-promo-banner__img
   width: 100%
@@ -611,9 +618,18 @@ textarea
     left: 0
     width: 100%
     height: 100%
-    background: url('../img/intro-image-triangle.png') center bottom no-repeat
-    background-size: 100% auto
+    background: url('../img/pattern.png')
     z-index: 5
+    &:after
+      display: block
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background: url('../img/intro-image-triangle.png') center bottom no-repeat
+      background-size: 100% auto
 
 .main-promo-banner__video-inner
   position: absolute
@@ -621,6 +637,7 @@ textarea
   left: 0
   width: 100%
   padding: 56% 0 0
+
 
 .main-promo-banner__text
   position: absolute
@@ -1520,6 +1537,11 @@ textarea
     width: 50%
 
 @media screen and (max-width: 767px)
+  .main-promo-banner
+    position: relative
+    .main-nav
+      position: static
+      background: #efefef
   .brand
     text-align: center
 
